# macro_player

./: README.md  main.py  plan.md  pyproject.toml  requirements.txt  settings.ini
macros/: IFTEST.macro  LOOPTEST.macro  addfunc_test.macro  block_test.macro  calltest.macro  macro.macro  macro2.macro  try_test.macro
src/core/: ast_builder.py  ast_nodes.py  condition.py  condition_funcs.py  constants.py  executor.py  expression.py  hotkey_manager.py  keys.py  parser.py  player.py  prefix.py  recorder.py  runner.py  settings_manager.py  variable_store.py
src/core/commands/: __init__.py  clipboard.py  window.py
src/gui/: code_editor.py  editor.py  editor_area.py  editor_tab.py  file_tree.py  log_panel.py  main_window.py  settings_dialog.py  sidebar.py  styles.py  syntax_highlighter.py  variable_panel.py
src/utils/: optional_deps.py
tests/: conftest.py  test_ast_builder.py  test_condition.py  test_constants.py  test_expression.py  test_keys.py  test_parser.py  test_variable_store.py
